hphp/test/zend/bad/ext/standard/tests/general_functions/bug49056.php
<?php

$string = <<<EOT
Cooking_furniture="Küchen Möbel (en)"
Küchen_Möbel="Cooking furniture (en)"
EOT;

$filename = dirname(__FILE__) . '/bug49056.tmp';

file_put_contents( $filename, $string);

var_dump(parse_ini_file($filename));

?>
<?php @unlink(dirname(__FILE__) . '/bug49056.tmp'); ?>